[gd_scene load_steps=7 format=2]

[ext_resource path="res://Theme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/GameUi.gd" type="Script" id=2]
[ext_resource path="res://Sprites/UI/Assets/Bars/bar_274.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/Assets/Bars/bar_199.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/Assets/Bars/bar_52.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/Assets/Windows/window4_40.png" type="Texture" id=6]

[node name="GameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CurrentLevelBg" type="NinePatchRect" parent="."]
margin_left = 504.0
margin_top = 549.0
margin_right = 530.0
margin_bottom = 571.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="CurrentLevel" type="Label" parent="CurrentLevelBg"]
margin_left = 3.0
margin_top = 7.0
margin_right = 43.0
margin_bottom = 23.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 1 )
text = "1"
align = 1
valign = 1

[node name="ExpBar" type="TextureProgress" parent="."]
margin_left = 839.0
margin_top = 554.0
margin_right = 929.0
margin_bottom = 574.0
rect_scale = Vector2( 2, 2 )
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 3
stretch_margin_right = 5
stretch_margin_bottom = 3

[node name="HpBar" type="TextureProgress" parent="."]
margin_left = 5.0
margin_top = 554.0
margin_right = 95.0
margin_bottom = 574.0
rect_scale = Vector2( 2, 2 )
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 3
stretch_margin_right = 5
stretch_margin_bottom = 3
